--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: chewie_audio
 description: An audio player for Flutter with Cupertino and Material play controls
-version: 1.5.0
+version: 1.5.1
 homepage: https://github.com/Sub6Resources/chewie_audio
 
 environment:
-  sdk: '>=2.13.0 <4.0.0'
-  flutter: '>=1.22.0'
+  sdk: ">=2.13.0 <4.0.0"
+  flutter: ">=1.22.0"
 
 dependencies:
   cupertino_icons: ^1.0.5
